# Portal2DGame

./: .gitignore  Acido.cpp  Acido.h  BarraDeEnergia.cpp  BarraDeEnergia.h  Bloque.cpp  Bloque.h  BloqueMetal.cpp  BloqueMetal.h  BloqueRoca.cpp  BloqueRoca.h  BolaEnergia.cpp  BolaEnergia.h  CMakeCache.txt  CMakeLists.txt  Camera.cpp  Camera.h  Cliente.cpp  Cliente.h  ColaBloqueante.h  CoordConverter.cpp  CoordConverter.h  Emisor.cpp  EmisorAbajo.cpp  EmisorAbajo.h  EmisorArriba.cpp  EmisorArriba.h  EmisorDerecha.cpp  EmisorDerecha.h  EmisorIzquierda.cpp  EmisorIzquierda.h  EstadoChell.cpp  EstadoChell.h  IDEA-SEPARADOR.cpp  InfoCuerpo.cpp  Input.h  Makefile  Mensajero.cpp  Mensajero.h  NOmbre Mapa.yaml  (+151 more)
libs/Box2D/Collision/: b2DynamicTree.cpp
libs/Box2D/Collision/Shapes/: b2PolygonShape.cpp
libs/yaml-cpp/: CTestTestfile.cmake  yaml-cpp-config.cmake  yaml-cpp-targets.cmake
libs/yaml-cpp/test/: CTestTestfile.cmake
libs/yaml-cpp/test/googletest_project-prefix/src/googletest_project-build/: CTestTestfile.cmake  install_manifest.txt
libs/yaml-cpp/test/googletest_project-prefix/src/googletest_project-build/googlemock/: CTestTestfile.cmake
libs/yaml-cpp/test/googletest_project-prefix/src/googletest_project-build/googlemock/gtest/: CTestTestfile.cmake
libs/yaml-cpp/test/googletest_project-prefix/tmp/: googletest_project-cfgcmd.txt
libs/yaml-cpp/util/: CTestTestfile.cmake  parse  read  sandbox
mapas/: mapa_1(1p).yaml  mapa_2(1).yaml  mapaboludo.yaml  porta22l.yaml  portal.yaml  prueba.yaml  todes.yaml
src/cliente/: Cliente.cpp  Cliente.h  ColeccionViewChells.cpp  ColeccionViewChells.h  Mixer.cpp  Mixer.h  Musica.cpp  Musica.h  ObtenedorInput.cpp  ObtenedorInput.h  Renderizables.cpp  Renderizables.h  Renderizador.cpp  Renderizador.h  Sprite.cpp  Sprite.h  ThInput.cpp  ThInput.h  ThRenderizado.cpp  ThRenderizado.h  ViewChell.cpp  ViewChell.h  boton_aceptar.cpp  boton_aceptar.h  boton_aceptar_partida.h  boton_bloque.cpp  boton_bloque.h  boton_editar.cpp  boton_editar.h  boton_escribir.h  boton_guardar.cpp  boton_guardar.h  boton_jugar.cpp  boton_jugar.h  boton_mapa.cpp  boton_mapa.h  boton_nueva_partida.cpp  boton_nueva_partida.h  boton_unirse_a_partida.cpp  boton_unirse_a_partida.h  (+74 more)
src/cliente/editor/: boton_bloque.cpp  boton_bloque.h  boton_escribir.cpp  boton_escribir.h  boton_guardar.h  botonera.cpp  constructor_piezas.cpp  constructor_piezas.h  editor.h  fondo_continuo.cpp  fondo_continuo.h  mapa_editor.cpp  pieza.h
src/cliente/grabacion/: grabador.cpp  grabador.h  th_video.cpp  th_video.h
src/cliente/graficos/: camara.h  coleccion_sprites.cpp  obtenedor_input.cpp  renderizable.cpp  renderizador.h  textura.cpp  textura.h  ventana.cpp  vista_chell.cpp  vista_chell.h
src/cliente/hilos/: th_esperando_id_partida.h  th_input.h
src/cliente/pantallas/: boton_aceptar.cpp  boton_aceptar_partida.cpp  boton_datos_conexion.cpp  boton_datos_conexion.h  boton_mapa.cpp  boton_mapa.h  boton_nueva_partida.cpp  botonera_mapas.cpp  inicio.cpp  pantalla_datos_conexion.cpp  pantalla_datos_conexion.h  pantalla_elegir_mapa.cpp  pantalla_elegir_partida.cpp  pantalla_esperando.h
src/cliente/sonidos/: mixer.cpp  musica.cpp  sonido.h  sonidos_chell.h
src/comun/: Bloque.h  BloqueMetal.cpp  BloqueMetal.h  BloqueRoca.cpp  BloqueRoca.h  Camera.cpp  Camera.h  ColaBloqueante.cpp  ColaBloqueante.h  EstadoChell.cpp  EstadoChell.h  InfoCuerpo.h  Input.cpp  Input.h  Mensajero.cpp  Mensajero.h  Protocolo.cpp  Protocolo.h  Renderable.cpp  Roca.cpp  SdlException.cpp  SdlTexture.cpp  SdlWindow.cpp  SdlWindow.h  SensorChell.cpp  Skt.cpp  SktAceptador.cpp  SktAceptador.h  Sonido.cpp  Sonido.h  SonidosChell.cpp  SonidosChell.h  Teletransportador.cpp  Teletransportador.h  Textura.cpp  Textura.h  Thread.cpp  Thread.h  Timer.cpp  Ventana.cpp  (+72 more)
src/servidor/: Acido.cpp  Acido.h  BarraDeEnergia.cpp  BarraDeEnergia.h  BolaEnergia.cpp  BolaEnergia.h  Emisor.cpp  Emisor.h  EmisorAbajo.cpp  EmisorAbajo.h  EmisorArriba.cpp  EmisorArriba.h  EmisorDerecha.cpp  EmisorDerecha.h  EmisorIzquierda.cpp  EmisorIzquierda.h  InfoCuerpo.h  Receptor.cpp  Receptor.h  ReceptorAbajo.cpp  ReceptorAbajo.h  ReceptorArriba.cpp  ReceptorArriba.h  ReceptorDerecha.cpp  ReceptorDerecha.h  ReceptorIzquierda.cpp  ReceptorIzquierda.h  SensorReceptor.cpp  SensorReceptor.h  SocketError.cpp  SocketError.h  acido.cpp  and.cpp  and.h  angulo.h  angulo_cero.cpp  angulo_cero.h  angulo_dos_setenta.cpp  angulo_dos_setenta.h  angulo_noventa.h  (+76 more)
src/servidor/fisicas/: angulo.h  angulo_ciento_ochenta.cpp  angulo_ciento_ochenta.h  angulo_dos_setenta.cpp  angulo_dos_setenta.h  angulo_noventa.cpp  angulo_noventa.h  bloque.h  bloque_metal_diagonal.cpp  bloque_roca.cpp  bloque_roca.h  bola_energia.cpp  chell.h  compuerta_logica.h  disparo.h  emisor_abajo.h  estado_cerrada.cpp  pistola.h  portal.h  receptor.h  receptor_abajo.cpp  receptor_derecha.h  receptor_izquierda.h  sensor_receptor.cpp  torta.h
src/servidor/hilos/: InfoCuerpo.cpp  enviar_cuerpos.cpp  enviar_cuerpos.h  manejador_partidas.cpp  partida.cpp  proceso_cliente.cpp  proceso_cliente.h  servidor.h
src/servidor/modelo_juego/: acido.cpp  and.cpp  and.h  angulo.h  angulo_ciento_ochenta.h  bloque.h  bloque_metal_diagonal.cpp  bloque_roca.cpp  boton.h  disparo.cpp  emisor.h  emisor_derecha.cpp  estado_compuerta.h  estado_logico.cpp  fisica.cpp  fisica.h  mundo.cpp  mundo.h  or.h  pistola.cpp  receptor_derecha.cpp  roca.cpp  sensor_receptor.h
